--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="shortcut icon" href="images/bg-image.jpg" type="image/x-icon">
     <style>
         body {
             background: url(images/bg-image.jpg) no-repeat;
@@ -32,7 +33,7 @@
         <div class="weather-status text-white text-center">
             <img id="weather-icon" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
             <h1 id="city">Name of the City</h1>
-            <h3><span id="temparature">Temperature</span>&deg;C</h3>
+            <h3><span id="temparature">Temperature -- </span>&deg;C</h3>
             <h1 id="condition" class="lead">Condition</h1>
         </div>
     </div>
